--- a/app/app.less
+++ b/app/app.less
@@ -1,5 +1,7 @@
 /* app css stylesheet */
 
+// @import 'bower_components/bootstrap/less/bootstrap.less';
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
@@ -27,4 +29,20 @@
 .menu > li:nth-child(1):before {
   content: "";
   padding: 0;
+}
+
+
+footer {
+  .fa-stack-2x {
+    font-size: 3em;
+  }
+
+  .fa-stack-1x {
+    font-size: 1.5em;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+  ul.list-inline {
+    margin-bottom: 25px;
+  }
 }
