--- a/app/app.less
+++ b/app/app.less
@@ -1,36 +1,15 @@
-/* app css stylesheet */
+@sidebar-width: 250px;
 
-// @import 'bower_components/bootstrap/less/bootstrap.less';
+@import 'click/click';
+@import 'animation';
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.contents-wrapper {
+  padding-top: 50px;
 }
 
-.menu:before {
-  content: "[";
+.section-wrapper {
+  margin-left: @sidebar-width;
 }
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
-
 
 footer {
   .fa-stack-2x {
