--- a/app/components/templates/header.html
+++ b/app/components/templates/header.html
@@ -8,22 +8,16 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-header">{{ site.compass.author }}</a>
+      <a class="navbar-brand page-scroll" href="#page-header">Angular Application</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="page-scroll" href="#about">About</a>
+          <a class="page-scroll" href="#about">Clicks</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Services</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#portfolio">Portfolio</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#contact">Contact</a>
+          <a class="page-scroll" href="#services">Mouse Positions</a>
         </li>
       </ul>
     </div>
