--- a/app/click/click.less
+++ b/app/click/click.less
@@ -1,6 +1,6 @@
-@theme-color: #337ab7;
+@theme-color:   #337ab7;
 @canvas-height: 450px;
-@sidebar-bg:  #f8f8f8;
+@sidebar-bg:    #f8f8f8;
 
 .aside-wrapper {
   position: fixed;
@@ -14,6 +14,7 @@
   float: left;
   background-color: darken(@sidebar-bg, 0%);
   box-shadow: 2px 0 10px darken(@sidebar-bg, 10%);
+  z-index: 1;
 }
 
 .click-playground {
