adding minfied files

--- a/app/click/click.less
+++ b/app/click/click.less
@@ -21,6 +21,7 @@
   height: @canvas-height;
   background-color: lighten(@theme-color, 50%);
   margin-bottom: 15px;
+  overflow: hidden;
 }
 
 .circle-span {
